--- a/server/static/login.html
+++ b/server/static/login.html
@@ -4,7 +4,7 @@
     <title>Example Login Form</title>
   </head>
   <body>
-    <form id="loginform" action="/session/connect" method="POST">
+    <form id="loginform" method="POST">
         <input name="username" id="username" class="username" placeholder="Username">
         <input name="password" id="password" class="password" placeholder="Password">
         <button name="password" type="submit" class="submit">Login</input>
